# ros2_control_demos

./: .gitignore  corridor3.yaml  frames_2025-07-07_04.46.54.gv  frames_2025-07-07_10.45.42.gv  frames_2025-07-08_11.42.01.gv  frames_2025-07-10_10.10.32.gv  frames_2025-07-15_05.45.32.gv  office2.pgm  office2.yaml
amr_urdf_v3/: CMakeLists.txt  package.xml
amr_urdf_v3/config/: joint_names_amr_urdf_v3.yaml
amr_urdf_v3/launch/: display.launch  gazebo.launch
amr_urdf_v3/meshes/: back_caster_swivel_link.STL  back_caster_wheel_link.STL  base_link.STL  camera_link.STL  front_caster_swivel_link.STL  front_caster_wheel_link.STL  imu_link.STL  left_motor_link.STL  lidar_link.STL  right_motor_link.STL
amr_urdf_v3/urdf/: amr_simp.urdf  amr_urdf_v3.csv  amr_urdf_v3.urdf
example_2/: CMakeLists.txt  frames_2025-07-12_09.41.23.gv  frames_2025-07-21_07.57.01.gv  frames_2025-07-22_04.55.13.gv  frames_2025-07-22_04.56.08.gv  package.xml
example_2/bringup/config/: diffbot_controllers.yaml  ekf_filter_node.yaml  slam_toolbox.yaml
example_2/bringup/launch/: diffbot.launch.py  newdiffbot.launch.py  slam_launch.py
example_2/description/ros2_control/: diffbot.ros2_control.xacro
example_2/description/urdf/: diffbot.urdf
example_2/hardware/: diffbot_system.cpp
example_2/imu/: bno085_publisher.py  imu_frame_test.py  imuprev  newest  old_bno085_publisher.py
example_2/maps/: corridor2.pgm  corridor2.yaml  corridor3.pgm  office.pgm  office.yaml
example_2/nav2_config/: nav2_params.yaml
example_2/rviz/: config.rviz  custom_config.rviz  slam_config_rviz.rviz
(+4 files in other folders)
