<?xml version="1.0"?>
<package format="3">
  <name>amr_urdf_v3</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for amr_urdf_v3</p>
    <p>This package contains configuration data, 3D models and launch files
for amr_urdf_v3 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>
  
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>gazebo_ros</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
